ajuste tamaño imgs y logo

--- a/ayudar.html
+++ b/ayudar.html
@@ -64,21 +64,21 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/imgs/carousel3.jpg" class="d-block w-100" alt="elefante alimentandose de un arbol">
+                <img src="./assets/imgs/carousel3.jpg" class="d-block w-100" alt="grupo de voluntarios posando frente a una aldea">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./assets/imgs/manh-phung-FsrECS_i2Ms-unsplash.jpg" class="d-block w-100" alt="grupo de voluntarios viajando y riendo">
+                <img src="./assets/imgs/carousel2.jpg" class="d-block w-100" alt="elefante alimentandose de un arbol">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./assets/imgs/su-nyoto-kY8m5uDIW7Y-unsplash.jpg" class="d-block w-100" alt="grupo de voluntarios posando frente a una aldea">
+                <img src="./assets/imgs/carousel1.jpg" class="d-block w-100" alt="grupo de voluntarios viajando y riendo">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
