--- a/error404.html
+++ b/error404.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Eloy Aragon">
+    <title>Error 404 - Page not found</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href=".\assets\css\styles.css">
     
@@ -15,13 +16,16 @@
     <!-- iconos -->
     <script src="https://kit.fontawesome.com/91db8b06b1.js" crossorigin="anonymous"></script> 
 </head>
-<body>
+<body class="cuerpoError404">
+
     <main class="mainError">
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <h1 class="col-lg-12 text-center">Epa! Aca no hay nada che!</h1>
-                <div class="col-lg-12 "><iframe src="https://gifer.com/embed/7IiG" width="" height="100%" ' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com"></a></p>
-                <h3 class="col-lg-6 text-center">No desespereis, hace <button class="btn-success">click acá</button> para volver al inicio</h3>
+                <h1 class="col-lg-12 text-center py-5 display-1">ERROR 404 PAGE NOT FOUND</h1>
+                <div class="gifError">
+                    <div class="tenor-gif-embed" data-postid="12807779" data-share-method="host" data-aspect-ratio="1.31148" data-width="100%"><a href="https://tenor.com/view/homer-simpson-les-simpson-matt-groening-ouff-non-gif-12807779">Homer Simpson GIF</a>from <a href="https://tenor.com/search/homer+simpson-gifs">Homer Simpson GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+                </div>
+                <h3 class="col-lg-12 text-center py-5 fs-1">No desesperéis, hacé <a class="btn btn-primary fs-5" href="./index.html" role="button">CLICK ACÁ</a> para volver al inicio</h3>
             </div>
         </div>
     </main>
